--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.2.4"
+    "mongoose": "^7.2.4",
+    "passport": "^0.6.0",
+    "passport-oauth2": "^1.7.0"
   },
   "devDependencies": {
     "concurrently": "^8.1.0",
