--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "client": "cd frontend && npm start",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd frontend && npm install && npm run build",
     "nodemonStart": "nodemon server.js",
     "dev": "concurrently --kill-others \"npm run nodemonStart\" \"npm run client\""
   },
