--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express-session": "^1.17.3",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.4",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-oauth2": "^1.7.0"
   },
