--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 5000
 
 MapQuest_API_Key = "3YMqVrChiwCSOjmf8gy7eSqoCXdD1fjR"
+
+appEmail =  'letsride.help@outlook.com',
+appEmailPassword = 'CS476@Summer'
