--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
 PORT = 5000
 
-MapQuest_API_Key = "3YMqVrChiwCSOjmf8gy7eSqoCXdD1fjR"
+DB_URL = mongodb+srv://aleenhasnani:DUqqgA7LoCgp1Jgp@letsride.dt7jgdg.mongodb.net/LetsRideDatabase?
 
-appEmail =  'letsride.help@outlook.com',
-appEmailPassword = 'CS476@Summer'
+MAPQUEST_API_Key = 3YMqVrChiwCSOjmf8gy7eSqoCXdD1fjR
+
+SESSION_SECRET = WeAreRegisteredInCs476
+
+APP_EMAIL =  letsride.help@outlook.com
+APP_EMAIL_PASSWORD = CS476@Summer
+
+URL = http://localhost:5000
