--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client": "cd frontend && npm start",
     "build": "cd frontend && npm install && npm run build",
     "nodemonStart": "nodemon server.js",
-    "dev": "concurrently --kill-others \"npm run nodemonStart\" \"npm run client\""
+    "dev": "concurrently --kill-others \"npm run nodemonStart\" \"npm run client\"",
+    "prod": "npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
