--- a/.env
+++ b/.env
@@ -11,4 +11,6 @@ APP_EMAIL_PASSWORD = CS476@Summer
 
 URL = http://localhost:5000
 
-PUBLIC_FOLDER = build
+URL2 = http://localhost:3000
+
+PUBLIC_FOLDER = public
