--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "client": "cd frontend && npm start",
+    "client": "cd frontend && npm run build && cd .. && npm run nodemonStart",
     "build": "cd frontend && npm install && npm run build",
     "nodemonStart": "nodemon server.js",
     "dev": "concurrently --kill-others \"npm run nodemonStart\" \"npm run client\"",
@@ -16,6 +16,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
