--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
-    "passport-oauth2": "^1.7.0"
+    "passport-oauth2": "^1.7.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "concurrently": "^8.1.0",
