--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "http-proxy-middleware": "^2.0.6",
     "leaflet": "^1.9.4",
     "mapquest": "^0.2.0",
+    "mapquest-api": "0.0.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
